--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,15 @@ beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2021.5.30
 charset-normalizer==2.0.4
+click==8.0.1
+dbf-light==1.0.0
 idna==3.2
+numpy==1.21.1
+pandas==1.3.1
+pymongo==3.12.0
+python-dateutil==2.8.2
+pytz==2021.1
 requests==2.26.0
+six==1.16.0
 soupsieve==2.2.1
 urllib3==1.26.6
