--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pymongo==3.12.0
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
+selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
 urllib3==1.26.6
