--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = buildgoodsparser.settings
+default = postsdataparser.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = buildgoodsparser
+project = postsdataparser
