--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pytz==2021.1
 queuelib==1.6.1
 requests==2.26.0
 Scrapy==2.5.0
+scrapy-selenium==0.0.7
 selenium==3.141.0
 service-identity==21.1.0
 six==1.16.0
